--- a/action.yml
+++ b/action.yml
@@ -4,34 +4,44 @@ author: 'vinccool96'
 inputs:
   github_token:
     description: 'GITHUB_TOKEN'
+    required: false
     default: ${{ github.token }}
   rubocop_version:
     description: 'Rubocop version'
+    required: false
   rubocop_extensions:
     description: 'Rubocop extensions'
+    required: false
     default: ''
   rubocop_flags:
     description: 'Rubocop flags. (rubocop <rubocop_flags>)'
+    required: false
     default: ''
   fail_level:
     description: 'The fail level of Rubocop. Default "error"'
+    required: false
     default: 'error'
   fail_on_error:
     description: |
       Exit code for rubocop when errors are found [true,false]
       Default is `false`.
+    required: false
     default: 'false'
   workdir:
     description: "The directory from which to look for and run Rubocop. Default '.'"
+    required: false
     default: '.'
   skip_install:
     description: "Do not install Rubocop or its extensions. Default: `false`"
+    required: false
     default: 'false'
   use_bundler:
     description: "Run Rubocop with bundle exec. Default: `false`"
+    required: false
     default: 'false'
   all_files:
     description: "Run Rubocop on all files. Default: `false`"
+    required: false
     default: 'false'
 runs:
   using: 'composite'
