--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "tabWidth": 2,
-  "useTabs": false,
-  "trailingComma": "none"
+  "useTabs": false
 }
