--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
