--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "actions-toolkit": "github:EndBug/actions-toolkit#core-actions",
     "js-yaml": "^4.1.0",
     "simple-git": "^3.7.1",
-    "string-argv": "^0.3.1"
+    "string-argv": "^0.3.1",
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
