--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Lint ruby files via rubocop",
   "main": "lib/index.js",
   "scripts": {
-    "build": "ncc build src/main.ts --minify --out lib",
-    "watch": "ncc build src/main.ts --watch --out lib",
+    "build": "ncc build src/index.ts --minify --out lib",
+    "watch": "ncc build src/index.ts --watch --out lib",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts --fix src",
     "prepare": "husky install",
