--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yaml": "^2.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
